[package]
name = "sci-units-proc-macro"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "Procedural macros for use with sci-units."
repository = "https://github.com/tyler-gilbert/sci-units"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["visit-mut"] }
quote = "1.0"
bincode = { version = "2.0.1", features = [
    "derive",
], default-features = false }
serde = { version = "1.0", optional = true }

[features]
std = ["serde", "serde/derive", "bincode/std"]
defmt = []
