[package]
name = "sci-units"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "A library for managing scientific units."
repository = "https://github.com/tyler-gilbert/sci-units"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
libm = { version = "0.2" }
defmt = { version = "0.3", optional = true }
bincode = { version = "2.0.1", features = [
    "derive",
], default-features = false }
serde = { version = "1.0", optional = true }
sci-units-proc-macro = { path = "../sci-units-proc-macro", version = "0.5.0" }

[dev-dependencies]
serde_json = "1"

[features]
std = ["serde", "serde/derive", "bincode/std"]
default = []
# the default type is double precision floating point (f64), use f32 to use single precision
f32 = []
use_defmt = ["defmt"]
