[package]
name = "units-proc-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
name = "units_proc_macro"
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0", features = ["visit-mut"] }
quote = "1.0"