[package]
name = "units-si"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
name = "units_si"
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0", features = ["visit-mut"] }
quote = "1.0"
bincode = { version = "2.0.1", features = [
    "derive",
], default-features = false }
serde = { version = "1.0", optional = true }

[features]
std = ["serde", "serde/derive", "bincode/std"]
defmt = []
