[package]
name = "units"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "units"
path = "src/lib.rs"

[dependencies]
units-si = { path = "../units-si" }
libm = { version = "0.2" }
defmt = { version = "0.3", optional = true }
bincode = { version = "2.0.1", features = [
    "derive",
], default-features = false }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
std = ["serde", "serde/derive", "bincode/std"]
default = []
# the default type is double precision floating point (f64), use f32 to use single precision
f32 = []
use_defmt = ["defmt"]
